--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.YUMFOOD"
         tools:targetApi="31">
         <activity
+            android:name=".customer.home.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
@@ -21,12 +24,12 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".customer.home.HomeActivity"
+            android:name=".customer.store_detail.StoreDetailActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
