--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,5 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-<<<<<<< HEAD
-        google()
-        mavenCentral()
-=======
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
 
@@ -15,16 +10,9 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath 'com.google.gms:google-services:4.3.15'
->>>>>>> 437a91090d18f5a96cd20f46c07d9e5aff81a5be
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath "com.google.gms:google-services:4.3.15"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
 }
